# sideout

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  VALIDATION.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/agents/: physics-reviewer.md
.claude/hooks/: block_video_commits.sh  pytest_after_src_edit.sh
.github/workflows/: ci.yml  pages.yml
demo/: README.md  build_demo.py  index.html
docs/: DEVLOG.md
docs/superpowers/specs/: 2026-07-20-v0.2-in-browser-analyze-design.md
samples/: .gitkeep  demo.mov
src/sideout/: __init__.py  cli.py
src/sideout/jump/: __init__.py  analysis.py  events.py  metrics.py  report.py  series.py
src/sideout/pose/: __init__.py  extractor.py  landmarks.py
src/sideout/viz/: __init__.py  overlay.py
tests/: fixtures.py  test_analysis.py  test_events.py  test_extractor.py  test_metrics.py  test_overlay.py  test_report.py  test_validation.py
validation/: __init__.py  fps_sensitivity.py
