[project]
name = "sideout"
version = "0.1.0"
description = "Local-first volleyball performance-analysis toolkit. First module: Jump Lab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ohm Patel" }]
keywords = ["volleyball", "pose-estimation", "biomechanics", "sports-analytics", "mediapipe"]

dependencies = [
    "mediapipe>=0.10.9",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sideout = "sideout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sideout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
