[project]
name = "sideout"
version = "0.1.0"
description = "Local-first volleyball performance-analysis toolkit. First module: Jump Lab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ohm Patel" }]
keywords = ["volleyball", "pose-estimation", "biomechanics", "sports-analytics", "mediapipe"]

dependencies = [
    "mediapipe>=0.10.9",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "typer>=0.12",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
]

[project.scripts]
sideout = "sideout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sideout"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.ruff.lint.per-file-ignores]
# B008: function calls in argument defaults is Typer's documented CLI idiom.
"src/sideout/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true
